[project]
name = "foo"
version = "0.1.0"
description = "A simple Python project using uv"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "anthropic>=0.49.0",
    "eth-account>=0.13.4",
    "google-genai>=1.3.0",
    "inspect-ai>=0.3.71",
    "monero>=1.1.1",
    "openai>=1.65.2",
    "python-dotenv>=1.0.1",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/foo"]  # Adjust this path to match your actual source directory
